--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
+  "scripts": {
+    "start": "node server.js",
+    "build": "snowpack build"
+  },
   "dependencies": {
     "axios": "^1.0.0",
     "express": "^4.18.1",
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.10.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "snowpack": "^3.8.8"
   }
 }
